--- a/org.openwms/trunk/source/org.openwms.tms.flex.module/src/main/flex/org/openwms/web/flex/client/tms/view/TransportOrderView.mxml
+++ b/org.openwms/trunk/source/org.openwms.tms.flex.module/src/main/flex/org/openwms/web/flex/client/tms/view/TransportOrderView.mxml
@@ -33,6 +33,7 @@
 
 	<mx:Script>
     	<![CDATA[
+    		import org.openwms.web.flex.client.model.ModelLocator;
     		import mx.collections.ArrayCollection;
     		import mx.controls.Alert;
     		import mx.controls.dataGridClasses.DataGridColumn;
@@ -47,12 +48,15 @@
             import org.openwms.web.flex.client.tms.view.dialogs.CancelTransportOrdersDialog;
             import org.openwms.web.flex.client.tms.view.dialogs.RedirectTransportOrderDialog;
             import mx.managers.PopUpManager;
+            [Inject]
+            [Bindable]
+            public var modelLocator:ModelLocator;            
+            [Inject]
+            [Bindable]
+            public var commonModelLocator:CommonModelLocator;            
     		[Inject]
     		[Bindable]
             public var tmsModelLocator:TMSModelLocator;
-	        [Inject]
-	        [Bindable]
-	        public var commonModelLocator:CommonModelLocator;            
             
     		private function onShow():void
     		{
@@ -145,7 +149,7 @@
             {
                 if (item[dg.dataField] != null)
                 {
-                    return String(item[dg.dataField].actualLocation);
+                    return String(item[dg.dataField]);
                 }
                 return "--";
             }
@@ -156,17 +160,17 @@
 	
 	<mx:DataGrid id="transportOrdersLst" width="95%" height="400" allowMultipleSelection="true" dataProvider="{tmsModelLocator.allTransportOrders}" y="63" x="10">
 		<mx:columns>
-			<mx:DataGridColumn headerText="ID" dataField="id" />
-			<mx:DataGridColumn headerText="State" dataField="state" labelFunction="formatAsString" />
-			<mx:DataGridColumn headerText="Priority" dataField="priority" labelFunction="formatAsString" />
-			<mx:DataGridColumn headerText="Transport Unit" dataField="transportUnit" labelFunction="formatBarcode" />
-			<mx:DataGridColumn headerText="Source Location" dataField="sourceLocation" labelFunction="formatAsString"/>
-            <mx:DataGridColumn headerText="Current Location" dataField="transportUnit" labelFunction="formatAsActualLocation" />
-			<mx:DataGridColumn headerText="Target Location" dataField="targetLocation" labelFunction="formatAsString" />
-			<mx:DataGridColumn headerText="Target Location Group" dataField="targetLocationGroup" labelFunction="formatLocationGroup" />
-			<mx:DataGridColumn headerText="Created" dataField="creationDate" labelFunction="formatAsDate"/>
-			<mx:DataGridColumn headerText="Started" dataField="startDate" labelFunction="formatAsDate"/>
-			<mx:DataGridColumn headerText="Finished" dataField="endDate" labelFunction="formatAsDate"/>
+			<mx:DataGridColumn headerText="ID" dataField="id" width="{ModelLocator.WIDTH_ID}" />
+			<mx:DataGridColumn headerText="State" dataField="state" width="{TMSModelLocator.WIDTH_STATE}" labelFunction="formatAsString" />
+			<mx:DataGridColumn headerText="Priority" dataField="priority" width="{TMSModelLocator.WIDTH_PRIORITY}" labelFunction="formatAsString" />
+			<mx:DataGridColumn headerText="Transport Unit" dataField="transportUnit" width="{CommonModelLocator.WIDTH_BARCODE}" labelFunction="formatBarcode" />
+			<mx:DataGridColumn headerText="Source Location" dataField="sourceLocation" width="{CommonModelLocator.WIDTH_LOCATION}" labelFunction="formatAsString"/>
+            <mx:DataGridColumn headerText="Current Location" dataField="transportUnit.actualLocation" width="{CommonModelLocator.WIDTH_LOCATION}" labelFunction="formatAsActualLocation" />
+			<mx:DataGridColumn headerText="Target Location" dataField="targetLocation" width="{CommonModelLocator.WIDTH_LOCATION}" labelFunction="formatAsString" />
+			<mx:DataGridColumn headerText="Target Location Group" dataField="targetLocationGroup" width="{CommonModelLocator.WIDTH_LOCATION_GROUP_NAME}" labelFunction="formatLocationGroup" />
+			<mx:DataGridColumn headerText="Created" dataField="creationDate" width="{ModelLocator.WIDTH_DATETIME}" labelFunction="formatAsDate"/>
+			<mx:DataGridColumn headerText="Started" dataField="startDate" width="{ModelLocator.WIDTH_DATETIME}" labelFunction="formatAsDate"/>
+			<mx:DataGridColumn headerText="Finished" dataField="endDate" width="{ModelLocator.WIDTH_DATETIME}" labelFunction="formatAsDate"/>
 		</mx:columns>
 	</mx:DataGrid>
 	<mx:HBox x="10" y="10" verticalAlign="middle" width="95%" backgroundColor="#F9FBB7">
@@ -178,7 +182,7 @@
         <mx:VRule height="10"/>
         <mx:Button id="refreshTransportOrdersBtn" buttonMode="true" mouseChildren="false" toolTip="Refresh the list of Transport Orders" icon="@Embed(source='assets/images/icons/refresh.png')" click="refresh()" />
 	    <mx:VRule height="10"/>
-	    <mx:Button id="showTransportOrderHistoryBtn" buttonMode="true" mouseChildren="false" toolTip="Show history of a Transport Order" icon="@Embed(source='assets/images/icons/history.png')" click="showCreateTransportOrderDialog()" />
+	    <mx:Button id="showTransportOrderHistoryBtn" buttonMode="true" mouseChildren="false" toolTip="Show history of a Transport Order" icon="@Embed(source='/assets/images/TransportOrder--History.png')" click="showCreateTransportOrderDialog()" />
 	    <mx:VRule height="10"/>
 	    <mx:Button id="redirectTransportOrderBtn" buttonMode="true" mouseChildren="false" toolTip="Redirect one or more Transport Orders" icon="@Embed(source='/assets/images/TransportOrder--Redirect.png')" click="showRedirectTransportOrderDialog()"/>
 	    <mx:VRule height="10"/>
