Fixed generation of AS inner classes, fixed ChangePasswordDialog
git-svn-id: https://openwms2005.svn.sourceforge.net/svnroot/openwms2005@970 fda5f131-174c-0410-8613-e0905860106b

--- a/org.openwms/trunk/source/org.openwms.client.flex.app/src/main/flex/org/openwms/web/flex/client/view/dialogs/ChangePasswordDialog.mxml
+++ b/org.openwms/trunk/source/org.openwms.client.flex.app/src/main/flex/org/openwms/web/flex/client/view/dialogs/ChangePasswordDialog.mxml
@@ -21,7 +21,7 @@
      * 02110-1301 USA, or see the FSF site: http://www.fsf.org.
      */
 -->
-<mx:Panel xmlns:mx="http://www.adobe.com/2006/mxml" width="400" height="300" title="Change User Password" fontSize="12" creationComplete="init();">
+<mx:Panel xmlns:mx="http://www.adobe.com/2006/mxml" width="400" height="242" title="Change User Password" fontSize="12" creationComplete="init();">
 
     <mx:Metadata>
         [Name]
@@ -32,7 +32,6 @@
     	<![CDATA[
     		import mx.managers.PopUpManager;
     		import mx.controls.Alert;
-    		import org.granite.tide.spring.Identity;
     		import org.openwms.web.flex.client.event.UserEvent;
     		import org.openwms.web.flex.client.model.ModelLocator;
     		import org.openwms.common.domain.system.usermanagement.User;
@@ -40,12 +39,9 @@
     		[In]
             [Bindable]
             public var modelLocator : ModelLocator;
-    		[In]
-            [Bindable]
-            public var identity:Identity;
     		
     		private function init():void {
-                currentPasswordTxt.setFocus();
+                newPasswordTxt.setFocus();
                 this.addEventListener(KeyboardEvent.KEY_DOWN, keyEventHandler);
                 PopUpManager.centerPopUp(this);
             }
@@ -55,13 +51,14 @@
                     var event:UserEvent = new UserEvent(UserEvent.CHANGE_USER_PASSWORD);
                     event.data = {user:modelLocator.selectedUser, password:newPasswordTxt.text};
                     dispatchEvent(event);
+                    closeDialog();
     			}
     			else {
     				Alert.show("Please re-type your password again");
     			}
     		}
     		
-    		private function closeDialog(event:Event):void {
+    		private function closeDialog(event:Event = null):void {
                 this.removeEventListener(KeyboardEvent.KEY_DOWN, keyEventHandler);
                 PopUpManager.removePopUp(this);
             }
@@ -76,15 +73,13 @@
     </mx:Script>
 
 	<mx:Canvas width="100%" height="100%">
-        <mx:Label x="10" y="20" text="Please enter the current and the new Password" fontSize="14"/>
+        <mx:Label x="10" y="20" text="Please enter a new Password for this User" fontSize="14"/>
         <mx:HRule x="10" y="51" width="360"/>
-		<mx:Label x="10" y="77" text="Current Password :" fontSize="14"/>
-        <mx:TextInput id="currentPasswordTxt" x="176" y="75" width="180" fontSize="14" displayAsPassword="true" enter="newPasswordTxt.setFocus();" />
-		<mx:Label x="11" y="122" text="New Password :" fontSize="14"/>
-        <mx:TextInput id="newPasswordTxt" x="176" y="120" width="180" fontSize="14" displayAsPassword="true" enter="retypePasswordTxt.setFocus();"/>
-		<mx:Label x="11" y="153" text="Re-type Password :" fontSize="14"/>
-        <mx:TextInput id="retypePasswordTxt" x="176" y="151" width="180" fontSize="14" displayAsPassword="true" enter="changeBtn.setFocus();"/>
-		<mx:HBox x="0" y="222" width="100%" horizontalAlign="center">
+		<mx:Label x="10" y="79" text="New Password :" fontSize="14"/>
+        <mx:TextInput id="newPasswordTxt" x="176" y="77" width="180" fontSize="14" displayAsPassword="true" enter="retypePasswordTxt.setFocus();"/>
+		<mx:Label x="10" y="110" text="Re-type Password :" fontSize="14"/>
+        <mx:TextInput id="retypePasswordTxt" x="176" y="108" width="180" fontSize="14" displayAsPassword="true" enter="changeBtn.setFocus();"/>
+		<mx:HBox x="0" y="159" width="100%" horizontalAlign="center">
 			<mx:Button id="changeBtn" label="Change" fontSize="12" click="change();"/>
 			<mx:Button id="cancelBtn" label="Cancel" fontSize="12" click="closeDialog(event);"/>
 		</mx:HBox>
