--- a/org.openwms/trunk/source/org.openwms.client.flex.app/src/main/flex/org/openwms/web/flex/client/view/management/UserManagementContent.mxml
+++ b/org.openwms/trunk/source/org.openwms.client.flex.app/src/main/flex/org/openwms/web/flex/client/view/management/UserManagementContent.mxml
@@ -68,6 +68,9 @@
                 shadowImage();
             }
             
+            /**
+             * Callback method. To be called when a new user image was saved.
+             */ 
             public function notify():void
             {
             	refresh();
