Set focus when dialog appears
git-svn-id: https://openwms2005.svn.sourceforge.net/svnroot/openwms2005@975 fda5f131-174c-0410-8613-e0905860106b

--- a/org.openwms/trunk/source/org.openwms.tms.flex.module/src/main/flex/org/openwms/web/flex/client/tms/view/dialogs/RedirectTransportOrderDialog.mxml
+++ b/org.openwms/trunk/source/org.openwms.tms.flex.module/src/main/flex/org/openwms/web/flex/client/tms/view/dialogs/RedirectTransportOrderDialog.mxml
@@ -43,6 +43,7 @@
 
             private function init():void 
     	    {
+    	    	targetLocationGroupCmb.setFocus();
                 this.addEventListener(KeyboardEvent.KEY_DOWN, keyEventHandler);
                 PopUpManager.centerPopUp(this);    		
     	    }
